--- a/index.html
+++ b/index.html
@@ -3,27 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Map Multi Image</title>
-  <link rel="stylesheet" href="./style.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div id="map-wrapper">
-  <div id="map">
-    <img id="map-image" src="./map.png" alt="map">
-
-    <!-- จุดตัวอย่าง -->
-    <div class="marker" style="top:40%; left:55%;" data-name="จุดที่ 1" data-images="img1.jpg,img2.jpg"></div>
-    <div class="marker" style="top:60%; left:30%;" data-name="จุดที่ 2" data-images="img3.jpg"></div>
-  </div>
+<div id="map">
+  <img src="map.png">
 </div>
 
-<!-- popup -->
-<div id="popup" class="hidden">
-  <span id="close">✖</span>
-  <h3 id="popup-title"></h3>
-  <div id="popup-images"></div>
-</div>
-
-<script src="./script.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
